--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- form input  -->
+    <div id="form"></div>
+    <!-- weather display  -->
+    <div id="weather"></div>
+    <!-- forecast display  -->
+    <div id="forecast"></div>
 </body>
 </html>
