form input during office hours

--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 </head>
 <body>
     <!-- form input  -->
-    <div id="form"></div>
+    <div id="form-container">
+        <form>
+            <label for="weather-search">
+                Search
+            </label>
+            <input id="weather-search" type="text">
+            <button>❓</button>
+        </form>
+    </div>
+
     <!-- weather display  -->
     <div id="weather"></div>
     <!-- forecast display  -->
     <div id="forecast"></div>
+    <!-- local scipt  -->
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
