--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <!-- form input  -->
     <div id="form-container">
-        <form>
+        <form id="weather-form">
             <label for="weather-search">
                 Search
             </label>
-            <input id="weather-search" type="text">
-            <button>❓</button>
+            <input id="weather-search" type="text" name="city" placeholder="Brooklyn" value="Brooklyn">
+            <button id="submit-button" type="submit">❓</button>
         </form>
     </div>
 
