--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     </div>
 
     <!-- weather display  -->
-    <div id="weather"></div>
+    <div id="weather">
+        <div id="tempreture"></div>
+        <div id="humidity"></div>
+        <div id="wind-speed"></div>
+    </div>
     <!-- forecast display  -->
     <div id="forecast"></div>
     <!-- local scipt  -->
