fetched weather for coords, and oneCall api during office hours

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 Search
             </label>
             <input id="weather-search" type="text" name="city" placeholder="Brooklyn" value="Brooklyn">
-            <button id="submit-button" type="submit">❓</button>
+            <button id="submit-button" type="submit">🔍</button>
         </form>
     </div>
 
