--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"
+    ></script>
 </head>
 <body>
     <!-- form input  -->
@@ -13,19 +24,32 @@
             <label for="weather-search">
                 Search
             </label>
-            <input id="weather-search" type="text" name="city" placeholder="Brooklyn" value="Brooklyn">
+            <input id="weather-search" type="text" name="city" placeholder="Brooklyn">
             <button id="submit-button" type="submit">🔍</button>
         </form>
     </div>
-
+    <!-- search history display  -->
+    <div id="history"></div>
     <!-- weather display  -->
     <div id="weather">
-        <div id="tempreture"></div>
-        <div id="humidity"></div>
-        <div id="wind-speed"></div>
+        <h1 id="today"></h1>
+            <h2 id="city"></h2>
+            <div id="tempreture">
+            </div>
+            <div id="humidity"></div>
+            <div id="wind-speed"></div>
+            <div id="uvi"></div>
     </div>
     <!-- forecast display  -->
-    <div id="forecast"></div>
+    <div id="forecast">
+        <h1 id="forecast">5 Days Weather Forecast</h1>
+            <h2 id="day-1"></h2>
+                <div class="day-1" style='background-color: blue;'>
+                    <div id="day-1-tempreture">
+                    </div>
+                    <div id="day-1-humidity"></div>
+                </div>
+    </div>
     <!-- local scipt  -->
     <script src="assets/js/script.js"></script>
 </body>
