add 5 days weather forecast

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
                     </div>
                     <div id="day-1-humidity"></div>
                 </div>
+        <h2 id="day-2"></h2>
+            <div class="day-2" style='background-color: green;'>
+                <div id="day-2-tempreture">
+                </div>
+                <div id="day-2-humidity"></div>
+            </div>
+        <h2 id="day-3"></h2>
+            <div class="day-3" style='background-color: yellow;'>
+                <div id="day-3-tempreture">
+                </div>
+                <div id="day-3-humidity"></div>
+            </div>
+        <h2 id="day-4"></h2>
+            <div class="day-4" style='background-color: red;'>
+                <div id="day-4-tempreture">
+                </div>
+                <div id="day-4-humidity"></div>
+            </div>
+        <h2 id="day-5"></h2>
+            <div class="day-5" style='background-color: aqua;'>
+                <div id="day-5-tempreture">
+                </div>
+                <div id="day-5-humidity"></div>
+            </div>       
+        </div>
     </div>
     <!-- local scipt  -->
     <script src="assets/js/script.js"></script>
